# lvgl_web_test

./: CMakeLists.txt  README.md  lv_conf.h
src/: lvgl_shell.html
